# intro_to_gaussian_splatting

./: .clang-format  .gitignore  README.md  bridal-dress.splat  build_ninja.sh  cpu_render.ipynb  cuda_render.ipynb  cuda_render_part_3.ipynb  get_data.sh  install.sh  load_luma.ipynb  load_luma.py  old_perspective_projection.ipynb  part_1.ipynb  part_2.ipynb  part_3.ipynb  pyproject.toml  read_gs_ply_files.py  render_splat_file.py  render_treehil copy.ipynb  render_treehil.ipynb  rgb_values.npy  run_setup.sh  setup.py  setup2.py  test.ipynb  working_render.ipynb
luma/: opacities.npy
original_gaussian_splat/: test.ipynb
original_gaussian_splat/arguments/: __init__ 2.py
original_gaussian_splat/scene/: __init__ 2.py  __init__.py  cameras.py  colmap_loader.py  dataset_readers.py  gaussian_model.py
original_gaussian_splat/utils/: camera_utils.py  general_utils.py
point_clouds/: cameras.json  input.ply  point_cloud.ply
splat/: gaussian_scene.py  gaussians.py  image.py  old_scene.py  read_colmap.py  scene.py  scene_2.py  schema.py  triton_code.py  triton_test.ipynb  utils.py
splat/c/: Makefile  checks.cu  loop.c  loop2.c  preprocessing.cu  render.cu  render_engine.cu  render_engine_backwards.cu  test.cpp  test.py
splat/custom_backwards_implementation/: forward_custom_and_render_engine.py  gaussian_weight_derivatives.cu  loss.py  test_gaussian_weight_grads.ipynb  test_grads.ipynb  test_intermediate.ipynb
splat/custom_pytorch_implementation/: auto_functions.py  covariance_derivatives.py  create_image_auto.py  create_image_custom.py  forward_total.ipynb  (+3 more)
(+40 files in other folders)
