[tool.poetry]
name = "splat"
version = "0.1.0"
description = "Personal repo for splatting"
authors = ["dcaustin33 <dcaustin33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.2.2"
numpy = "^1.26.4"
pycolmap = "^0.6.1"
pydantic = "^2.7.1"
matplotlib = "^3.8.4"
einops = "^0.8.0"
tqdm = "^4.66.4"
plyfile = "^1.0.3"
scikit-learn = "^1.4.2"
pyyaml = "^6.0.1"
wurlitzer = "^3.1.0"
ninja = "^1.11.1.1"
pybind11 = "^2.13.6"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88