[project]
name = "splat"
version = "0.1.0"
description = ""
authors = [
    {name = "Derek",email = "dcaustin33@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (<2.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pycolmap (>=3.11.1,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "plyfile (>=1.1,<2.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
